# backend-internship-app

./: .gitignore  README.md  SayedWork.md  books  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Book_Project/todoapi/: db.sqlite3
Book_Project/todoapi/accounts/: models.py  serializers.py  urls.py  views.py
Book_Project/todoapi/books/: models.py  serializers.py  urls.py  views.py
Book_Project/todoapi/todoapi/: settings.py  urls.py
Books_store/: db.sqlite3  manage.py
Books_store/Books/: models.py  serializers.py  urls.py  views.py
Books_store/Books/migrations/: 0001_initial.py
Books_store/Books_store/: asgi.py  settings.py  urls.py  wsgi.py
Books_store/accounts/: serializers.py  urls.py  views.py
Books_store/users/: serializers.py  urls.py  views.py
Bookstore/: db.sqlite3  manage.py
Bookstore/Bookstore/: asgi.py  settings.py  urls.py  wsgi.py
Bookstore/BookstoreData/: admin.py  apps.py  models.py
Bookstore/BookstoreData/migrations/: 0001_initial.py  0002_author_alter_books_author.py
Bookstore/api/: serializers.py  urls.py  views.py
Library_Platform/: asgi.py  settings.py  urls.py  wsgi.py
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_book_date_created_book_date_updated_alter_book_id.py  0003_alter_book_id.py  0004_alter_book_publishdate.py  0005_alter_book_publishdate.py
app/: settings.py  urls.py
authentication/: permissions.py  serializer.py  serializers.py  urls.py  views.py
backendApp/: asgi.py  settings.py  urls.py  wsgi.py
backend_project/: asgi.py  settings.py  urls.py  wsgi.py
book/: admin.py  models.py  serializers.py  urls.py  views.py
book/migrations/: 0001_initial.py
books/: admin.py  apps.py  models.py  permissions.py  serializers.py  settings.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_options_alter_book_publish_date.py
crud/: db.sqlite3
crud/apis/: permissions.py  serializers.py  urls.py  views.py
crud/blogs/: admin.py  models.py
crud/blogs/migrations/: 0001_initial.py  0002_alter_blog_pub_date.py  (+6 more)
crud/crud/: settings.py  urls.py
crud_app/: apps.py  models.py  serializers.py  urls.py  views.py
crud_app/migrations/: 0001_initial.py  0002_alter_book_authors.py
suiii/: manage.py  pyproject.toml
suiii/books/: admin.py  models.py  urls.py
suiii/suiii/: asgi.py  settings.py  urls.py  wsgi.py
task1-CRUD/: pyproject.toml
task1-CRUD/crud_app/: manage.py
task1-CRUD/crud_app/books/: admin.py  models.py  urls.py  views.py
task1-CRUD/crud_app/books/migrations/: 0001_initial.py
task1-CRUD/crud_app/crud_app/: settings.py  wsgi.py
users/: admin.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+9 files in other folders)
