[tool.poetry]
name = "backend-internship-app"
version = "0.1.0"
description = ""
authors = ["islamsaeed9854 <83390999+EslamSaeed9854@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "backend_internship_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
knox = "^0.1.14"
cryptography = "^38.0.3"
jinja2 = "^3.1.2"
boto3 = "^1.26.1"
django-rest-knox = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
