[tool.poetry]
name = "books-store"
version = "0.1.0"
description = ""
authors = ["ahmed <ahmedraslan28@gmail.com>"]
readme = "README.md"
packages = [{include = "books_store"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
django-rest-knox = "^4.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
