[tool.poetry]
name = "backend-internship-app"
version = "0.1.0"
description = ""
authors = ["Ahmed ElOraby <ahmed.eloraby3547@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_internship_app"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
django-model-utils = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
